<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.androidpractice.easycloud.DetailActivity">

    <item
        android:id="@+id/action_resize"
        android:title="@string/action_resize"
        app:showAsAction="never">
    </item>


    <item
        android:id="@+id/action_rename"
        android:title="@string/action_rename"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_enable_backups"
        android:title="@string/action_enable_backups"
        app:showAsAction="never">
    </item>


    <item
        android:id="@+id/action_disable_backups"
        android:title="@string/action_disable_backups"
        app:showAsAction="never">
    </item>

</menu>
